<resources>
    <string name="app_name">EasyOrderApp</string>
    <string name="Error">Error</string>
    <string name="Exception">Exception</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Easy Order App</string>
    <string name="nav_header_subtitle"></string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="enter_login">Enter Login</string>
    <string name="sign_in">Sign in</string>
    <string name="enter_pwd">Enter password</string>
    <string name="remember_login">Remember login</string>
    <string name="not_regi">Not registered? Click here!</string>
    <string name="forgot_pwd">I forgot my password.</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="confirm_pwd">Confirm Password</string>
    <string name="enter_postal_code">Enter Postal Code</string>
    <string name="enter_town">Enter Town</string>
    <string name="enter_address">Enter Address</string>
    <string name="enter_credit_card">Enter Credit Card</string>
    <string name="enter_cvv">Enter CVV</string>
    <string name="enter_cardholder">Enter Cardholder</string>
    <string name="sign_up">Sign Up</string>
    <string name="agree">I agree to the</string>
    <string name="terms_of_use">Terms of Use &amp; Privacy Policy</string>
    <string name="already_registered">Already registered? Click here!</string>
    <string name="welcome">Welcome</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="postal_code">Postal Code</string>
    <string name="town">Town</string>
    <string name="address">Address</string>
    <string name="change_pwd">Change Password</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="user_data">User Data</string>
    <string name="orders">Orders</string>
    <string name="log_out">Log Out</string>
    <string name="share">Share</string>
    <string name="communicate">Communicate</string>
    <string name="your_oders">Your Orders</string>
    <string name="order_num">Order Nº</string>
    <string name="order_name">Name</string>
    <string name="order_date">Date</string>
    <string name="price">Price(€)</string>
    <string name="new_order">New Order</string>
    <string name="product">Product</string>
    <string name="quantity">Quantity/Kg</string>
    <string name="total">Total(€)</string>
    <string name="proccess">Proccess Order</string>
    <string name="order_conf">Order Confirmation</string>
    <string name="cancel">Cancel</string>
    <string name="accept">Accept</string>
    <string name="save">Save</string>
    <string name="current_pwd">Current password</string>
    <string name="new_pwd">New password</string>
    <string name="conf_new_pwd">Confirm new password</string>
    <string name="recover_pwd">Recover password</string>
    <string name="pwd_recovery">Password recovery</string>

</resources>
