<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/userDataOption"
            android:icon="@drawable/ic_userdata"
            android:title="@string/user_data" />
        <item
            android:id="@+id/OrdersOption"
            android:icon="@drawable/ic_shopping"
            android:title="@string/your_oders"/>
        <item
            android:id="@+id/logOutOption"
            android:icon="@drawable/ic_exit"
            android:title="@string/log_out" />

    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />

        </menu>
    </item>

</menu>