<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:screenOrientation="portrait"
    tools:context=".Activities.activity_order_confirmation">

    <Button
        android:id="@+id/btnAccept"
        android:layout_width="131dp"
        android:layout_height="44dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="25dp"
        android:text="@string/accept"
        android:textSize="17dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.721"
        app:layout_constraintStart_toEndOf="@+id/btnCancel"
        app:layout_constraintTop_toBottomOf="@+id/tableCreditAddress" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="131dp"
        android:layout_height="44dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="86dp"
        android:layout_marginBottom="25dp"
        android:text="@string/cancel"
        android:textSize="17dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnAccept"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableCreditAddress" />

    <TextView
        android:id="@+id/txtOrderConfirmation"
        android:layout_width="381dp"
        android:layout_height="56dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="20dp"
        android:paddingLeft="50dp"
        android:text="@string/order_conf"
        android:textAlignment="center"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tableOrder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/tableOrder"
        android:layout_width="338dp"
        android:layout_height="377dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="180dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtOrderConfirmation"
        app:layout_constraintVertical_bias="0.0">

        <TableRow>

            <TextView
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#f1f1f1"
                android:gravity="center"
                android:text="@string/product"
                android:textStyle="bold" />

            <TextView
                android:layout_width="91dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#f1f1f1"
                android:gravity="center"
                android:text="@string/quantity"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#f1f1f1"
                android:gravity="center"
                android:text="@string/price"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#f1f1f1"
                android:gravity="center"
                android:text="@string/total"
                android:textStyle="bold" />
        </TableRow>

    </TableLayout>

    <TableLayout
        android:id="@+id/tableCreditAddress"
        android:layout_width="342dp"
        android:layout_height="92dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableOrder"
        app:layout_constraintVertical_bias="0.21">

    </TableLayout>

</android.support.constraint.ConstraintLayout>