<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:screenOrientation="portrait"
    android:background="@drawable/side_nav_bar"
    tools:context=".Fragments.activity_orders_fragment">

    <TextView
        android:id="@+id/txtYourOrders"
        android:layout_width="286dp"
        android:layout_height="56dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:paddingLeft="50dp"
        android:text="@string/your_oders"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.348"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/tableOrders"
        android:layout_width="318dp"
        android:layout_height="387dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtYourOrders">

        <TableRow>

            <TextView
                android:layout_width="34dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#f1f1f1"
                android:gravity="center"
                android:text="@string/order_num"
                android:textStyle="bold" />

            <TextView
                android:layout_width="78dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#f1f1f1"
                android:gravity="center"
                android:text="@string/order_name"
                android:textStyle="bold" />

            <TextView
                android:layout_width="61dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#f1f1f1"
                android:gravity="center"
                android:text="@string/order_date"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#f1f1f1"
                android:gravity="center"
                android:text="@string/price"
                android:textStyle="bold" />
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/btnNuevoPedido"
        android:layout_width="62dp"
        android:layout_height="61dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="+"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.918"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableOrders" />
</android.support.constraint.ConstraintLayout>