<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:screenOrientation="portrait"
    tools:context=".Activities.activity_new_order">

    <TableLayout
        android:id="@+id/tableLayout2"
        android:layout_width="338dp"
        android:layout_height="477dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <TableRow>

            <TextView
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#f1f1f1"
                android:gravity="center"
                android:text="@string/product"
                android:textStyle="bold" />

            <TextView
                android:layout_width="91dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#f1f1f1"
                android:gravity="center"
                android:text="@string/quantity"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#f1f1f1"
                android:gravity="center"
                android:text="@string/price"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#f1f1f1"
                android:gravity="center"
                android:text="@string/total"
                android:textStyle="bold" />
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/txtTotalPrice"
        android:layout_width="51dp"
        android:layout_height="20dp"
        android:layout_marginStart="323dp"
        android:layout_marginEnd="37dp"
        android:layout_marginBottom="3dp"
        android:background="#f1f1f1"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout2" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="394dp"
        android:layout_height="80dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/eTxtOrderName"
            android:layout_width="176dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/new_order" />

        <ImageButton
            android:id="@+id/btnSaveOrder"
            android:layout_width="31dp"
            android:layout_height="51dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="0dp"
            android:adjustViewBounds="true"
            android:background="@null"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/save" />

        <ImageButton
            android:id="@+id/btnDelete"
            android:layout_width="47dp"
            android:layout_height="58dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="25dp"
            android:adjustViewBounds="true"
            android:background="@null"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/delete" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="558dp"
        android:layout_height="82dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout2">

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="65dp"
            android:layout_height="64dp"
            android:layout_marginStart="105dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="80dp"
            android:layout_marginBottom="8dp"
            android:text="+"
            android:textSize="30dp" />

        <Button
            android:id="@+id/btnProcessOrder"
            android:layout_width="135dp"
            android:layout_height="58dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="8dp"
            android:text="@string/proccess" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>